--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <!-- </div> -->
 
     <div class="content">
-    <a name="hereskip"></a>
+    <a id="hereskip"></a>
     <section class="hero">
         <h3>Know more about me!</h3>
         <img src="image/personpicture.jpg" alt = "person picture"/>
