--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <!-- </div> -->
         
         <div class="content">
-        <a name="hereskip"></a>
+        <a id="hereskip"></a>
         <section class="hero">
             <h1>Contact me!</h1>
             <p>Hey! If you have any questions please don't hesitate to use the following form to contact me.</p>
@@ -37,7 +37,7 @@
             <!-- <img src="image/line.png" alt = "line"/> -->
                 <div>
                         <form action="/action_page.php">
-                          <label for="fname">Name</label>
+                          <label for="name">Name</label>
                           <input type="text" id="name" name="name" placeholder="Your name..">
                       
                           <label for="email">Email</label>
@@ -51,7 +51,7 @@
                             <option value="china">China</option>
                             <option value="usa">USA</option>
                           </select>
-                          <label for="Message">Message</label>
+                          <label for="message">Message</label>
                           <input id="message" name="message" type="text" placeholder="Enter your massage for us here. I will get back to you within 2 business days." >
 
                           <input type="submit" value="Submit">
