--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- </div> -->
     
         <div class="content">
-        <a name="hereskip"></a>
+        <a id="hereskip"></a>
         <section class="hero">
         <p>Yujia Yang</p>
         <p>Data + Social Media</p>
