--- a/resume.html
+++ b/resume.html
@@ -28,9 +28,9 @@
     <!-- </div> -->
 
     <div class="content">
-    <a name="hereskip"></a>
+    <a id="hereskip"></a>
     <section class="hero">
-        <h1>Resume!</h1>
+        <h3>Resume!</h3>
         <p>Here is my resume, please take a look! If you are interested in some projects, you can go to the homepage to check it!</p>
         <a>You can click </a><img src="image/download.png" alt = "dw" style="vertical-align:middle"><a> on upper right corner to download my resume!</a>
         <div class="showcase">
