--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="content">
         <a id="hereskip"></a>
         <section class="hero">
-        <p>Yujia Yang</p>
-        <p>Data + Social Media</p>
+        <h1>Yujia Yang</h1>
+        <h2>Data + Social Media</h2>
     <div>
             <div class="row">
                     <div class="column">
