--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
             </nav>
         </div>
     <!-- </div> -->
-
+    <div role="main">
     <div class="content">
     <a id="hereskip"></a>
     <section class="hero">
@@ -43,6 +43,7 @@
             <p>Yujia Yang | yyjia@umich.edu | +1 734 834 8472 </p> 
         </footer></div>
             </div>
+        </div>
     </div>
 </body>
 </html>
