--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <title>Yujia Yang</title>
 </head>
 <body>
-<div role="main">
+<main role="main">
 <a href="#hereskip" class="skip">Skip to content</a>
     <div class="header">
                 <h1>Here is Yujia!</h1>
@@ -39,12 +39,13 @@
 
             </div>  
         </section>
+   </main>
         <div class="footer">
             <footer>
             <p>Yujia Yang | yyjia@umich.edu | +1 734 834 8472 </p> 
         </footer></div>
             </div>
-        </div>
+        
     </div>
 </body>
 </html>
