--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <title>Yujia Yang</title>
 </head>
 <body>
-<main role="main">
+<main>
 <a href="#hereskip" class="skip">Skip to content</a>
     <div class="header">
                 <h1>Here is Yujia!</h1>
