--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <title>Yujia Yang</title>
 </head>
 <body>
-<main role="main" aria-labelledby="title1">
+
 <a href="#hereskip" class="skip">Skip to content</a>
     <div class="header">
                 <h1>Here is Yujia!</h1>
@@ -39,8 +39,8 @@
 
             </div>  
         </section>
-   </main>
-        <div class="footer" role="main" aria-labelledby="title2">
+
+        <div class="footer">
             <footer>
             <p>Yujia Yang | yyjia@umich.edu | +1 734 834 8472 </p> 
         </footer></div>
