--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
         <p>Here is my resume, please take a look! If you are interested in some projects, you can go to the homepage to check it!</p>
         <a>You can click </a><img src="image/download.png" alt = "dw" style="vertical-align:middle"><a> on upper right corner to download my resume!</a>
         <div class="showcase">
-        <iframe src="https://drive.google.com/file/d/12A1LJto7VlVLxkJJtLus71nyq9yfJYFB/preview"></iframe>
+        <iframe src="https://drive.google.com/file/d/12A1LJto7VlVLxkJJtLus71nyq9yfJYFB/preview" title="myFrame"></iframe>
 
             </div>  
         </section>
