--- a/resume.html
+++ b/resume.html
@@ -11,13 +11,13 @@
 <body>
 
 <a href="#hereskip" class="skip">Skip to content</a>
-    <div class="header">
+    <div class="header" role="banner">
                 <h1>Here is Yujia!</h1>
                 <p>Use data to solve real world problem!</p>
             </div>
     <div class="container">
         <div class="sidebar">
-            <nav>
+            <nav role="navigation">
                 <ul>
                     <li><a class='home' href = "index.html">HoMe!</a></li>
                     <li><a class='about' href = "about.html">AboutMe!</a></li> 
@@ -27,9 +27,9 @@
             </nav>
         </div>
     <!-- </div> -->
-
-    <div class="content">
-    <a id="hereskip"></a>
+<a id="hereskip"></a>
+    <div class="content" role="main">
+    
     <section class="hero">
         <h1>Resume!</h1>
         <p>Here is my resume, please take a look! If you are interested in some projects, you can go to the homepage to check it!</p>
@@ -40,7 +40,7 @@
             </div>  
         </section>
 
-        <div class="footer">
+        <div class="footer" role="contentinfo">
             <footer>
             <p>Yujia Yang | yyjia@umich.edu | +1 734 834 8472 </p> 
         </footer></div>
