--- a/resume.html
+++ b/resume.html
@@ -28,9 +28,9 @@
         </div>
     <!-- </div> -->
 <a id="hereskip"></a>
-    <div class="content" role="main">
+    <div class="content">
     
-    <section class="hero">
+    <section class="hero" role="main">
         <h1>Resume!</h1>
         <p>Here is my resume, please take a look! If you are interested in some projects, you can go to the homepage to check it!</p>
         <a>You can click </a><img src="image/download.png" alt = "dw" style="vertical-align:middle"><a> on upper right corner to download my resume!</a>
@@ -40,8 +40,8 @@
             </div>  
         </section>
 
-        <div class="footer" role="contentinfo">
-            <footer>
+        <div class="footer">
+            <footer role="contentinfo">
             <p>Yujia Yang | yyjia@umich.edu | +1 734 834 8472 </p> 
         </footer></div>
             </div>
