--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 <a href="#hereskip" class="skip">Skip to content</a>    
-    <div class="header">
+    <div class="header" role="banner">
         <h1>Here is Yujia!</h1>
         <p>Use data to solve real world problem!</p>
     </div>
     <div class="container">
         <div class="sidebar">
-            <nav>
+            <nav role="navigation">
                 <ul>
                 <li><a class='home' href = "index.html">HoMe!</a></li>
                 <li><a class='about' href = "about.html">AboutMe!</a></li> 
@@ -29,7 +29,7 @@
 
     <div class="content">
     <a id="hereskip"></a>
-    <section class="hero">
+    <section class="hero" role="main">
         <h1>Know more about me!</h1>
         <img src="image/personpicture.jpg" alt = "person picture"/>
         <div class="hero-content">
@@ -49,7 +49,7 @@
             </a></div>
     </section>
 <div class="footer">
-    <footer>
+    <footer role="contentinfo">
     <p>Yujia Yang | yyjia@umich.edu | +1 734 834 8472 </p> 
 </footer></div>
     </div>
