--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
 <body>
         <a href="#hereskip" class="skip">Skip to content</a>
 
-        <div class="header">
+        <div class="header" role="banner">
                 <h1>Here is Yujia!</h1>
                 <p>Use data to solve real world problem!</p>
             </div>
             <div class="container">
                 <div class="sidebar">
-                    <nav>
+                    <nav role="navigation">
                         <ul>
                         <li><a class='home' href = "index.html">HoMe!</a></li>
                         <li><a class='about' href = "about.html">AboutMe!</a></li> 
@@ -30,7 +30,7 @@
         
         <div class="content">
         <a id="hereskip"></a>
-        <section class="hero">
+        <section class="hero" role="main">
          
             <h1>Contact me!</h1>
             <p>Hey! If you have any questions please don't hesitate to use the following form to contact me.</p>
@@ -61,7 +61,7 @@
                     <p>Thanks for your contact!</p>
         </section>
         <div class="footer">
-                <footer>
+                <footer role="contentinfo">
                 <p>Yujia Yang | yyjia@umich.edu | +1 734 834 8472 </p> 
             </footer></div>
                 </div>
