--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
         <a href="#hereskip" class="skip">Skip to content</a>    
-        <div class="header">
+        <div class="header" role="banner">
             <h1>Here is Yujia! Welcome to my website!</h1>
 
             <p>Use data to solve real world problem!</p>
         </div>
 <div class="container">
             <div class="sidebar">
-                <nav>
+                <nav role="navigation">
                     <ul>
                     <li><a class='home' href = "index.html">HoMe!</a></li>
                     <li><a class='about' href = "about.html">AboutMe!</a></li> 
@@ -30,7 +30,7 @@
     
         <div class="content">
         <a id="hereskip"></a>
-        <section class="hero">
+        <section class="hero" role="main">
         <h1>Yujia Yang</h1>
         <h2>Data + Social Media</h2>
     <div>
@@ -109,7 +109,7 @@
     </div>
 </section>
 <div class="footer">
-    <footer>
+    <footer role="contentinfo">
     <p>Yujia Yang | yyjia@umich.edu | +1 734 834 8472 </p> 
 </footer></div>
     </div>
