--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,7 @@
                         </form>
                       </div>
                     <p>Thanks for your contact!</p>
+                    <p>I will upload new version both of my resume and the homepage once I have new experience. So please keep an eye on the website please!</p>
         </section>
         <div class="footer">
                 <footer role="contentinfo">
